# live2dview

./: .gitignore  README.md  README_MONO.md  detect_bev.py  main.py  pyproject.toml
backend/: README.md  main.py  models_wrapper.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx
