[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.2",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pyquaternion>=0.9.9",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "ultralytics>=8.4.70",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
